--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="delete">Delete</string>
     <string name="tv_delete">Select tunnel to delete</string>
     <string name="tv_select_a_storage_drive">Select a storage drive</string>
+    <string name="tv_no_file_picker">Please install a file management utility to browse files</string>
     <string name="tv_add_tunnel_get_started">Add a tunnel to get started</string>
     <string name="disable_config_export_title">Disable config exporting</string>
     <string name="disable_config_export_description">Disabling config exporting makes private keys less accessible</string>
