--- a/ui/src/main/res/values-ja/strings.xml
+++ b/ui/src/main/res/values-ja/strings.xml
@@ -105,7 +105,7 @@
     <string name="hint_random">(ランダム)</string>
     <string name="illegal_filename_error">不正なファイル名 “%s”</string>
     <string name="import_error">トンネル設定をインポートできません: %s</string>
-    <string name="import_from_qr_code">QR コードからトンネル設定をインポートできません</string>
+    <string name="import_from_qr_code">QR コードからトンネル設定をインポートします</string>
     <string name="import_success">“%s” をインポートしました</string>
     <string name="interface_title">インターフェース</string>
     <string name="key_contents_error">鍵に不正な文字があります</string>
