--- a/ui/src/main/res/values-zh-rCN/strings.xml
+++ b/ui/src/main/res/values-zh-rCN/strings.xml
@@ -27,7 +27,7 @@
     <plurals name="n_included_applications">
         <item quantity="other">对 %d 个应用生效</item>
     </plurals>
-    <string name="all_applications">对全部应用生效</string>
+    <string name="all_applications">全部应用程序</string>
     <string name="exclude_from_tunnel">不生效</string>
     <string name="include_in_tunnel">生效</string>
     <plurals name="include_n_applications">
